--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-show-more-text": "^1.5.0",
     "sequelize": "^6.6.5",
     "web-vitals": "^1.1.2"
   },
