--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-lorem-ipsum": "^1.4.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
