Added example case for InfiniteScroll.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "pg": "^8.7.1",
