--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "react-show-more-text": "^1.5.0",
     "sequelize": "^6.6.5",
     "web-vitals": "^1.1.2"
