--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropdown-input": "^0.1.11",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-search-autocomplete": "^5.4.4",
     "react-select": "^5.2.1",
     "react-show-more-text": "^1.5.0",
     "sequelize": "^6.6.5",
